add phase 0 code
